--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "engines": {
     "yarn": "1",
     "npm": "9",
-    "node": ">=16.x"
+    "node": ">=14.x"
   },
   "scripts": {
     "test": "npm run simpletest",
-    "build": "sass public/stylesheets/style.sass:public/stylesheets/style.css",
+    "build": "sass public/stylesheets/style.sass:public/stylesheets/style.css && node serverInit.mjs",
     "simpletest": "node ./test/schemaTest.mjs",
     "printSchema": "node ./bin/printSchema.mjs",
     "watch": "npm run build ; nodemon serverInit.mjs",
-    "start": "npm run build ; node serverInit.mjs",
+    "start": "npm run build",
     "prepare": "yarn run snyk-protect",
     "snyk-protect": "snyk-protect"
   },
